2016-08-27  Tom 7  <Tom@RIVERCITY>

        * md5.cc: Fixed bug where solutions weren't stored correctly.
          You can paste the "-- ratings" selection from an old .esp
          file or backup into your new .esp file in order to get
          solutions back. A solution that starts with 0123456789abcdef
          is buggy and won't correspond to any level.

2016-08-21  Tom 7  <Tom@RIVERCITY>

        * makefile: Updated build process on Windows and Linux as well.
          Escape is now 64-bit everywhere. Using "Beta 5" moniker now.
          Aggressively compressed graphics.

        * makefile: Fixed console appearing on win32.

2016-07-29  Tom 7  <tom7@...>

        * Getting this to compile on modern OS X.

2014-01-01  Tom 7  <Tom@WARPZONE>

        * edit.cc: Using ctrl-middle-click in the editor should mark
          the level as changed. Done. (Thanks N7DOT!)

2010-11-26  Tom 7  <Tom@WARPZONE>

        * play.cc: The 'i' key while playing, which is tedious and
          rarely intentional, is now ctrl-i. A new key ctrl-a temporarily
          toggles animation. (Thanks, wowei!)

        * load.cc: Improved the interface for ctrl-0 (from the loader)
          and made it possible to just run it on a single level.

2010-01-18  Tom 7  <Tom@WARPZONE>

        * upper.cc: Made the upgrade process more robust. (Thanks adam!)

2009-12-24  Tom 7  <twm@...>

        * level.cc: Check more corner cases when loading levels, to
          protect against particularly subversive authors. (Thanks
          radiant!)

2009-12-20  Tom 7  <Tom@WARPZONE>

        * animation.cc: Finally added teleport animation for both the
          player and daleks.

        * server/upload.aa: Instituted a limit to the number of levels
          that can be uploaded in a 24-hour period.

2009-12-19  Tom 7  <Tom@WARPZONE>

        * play.cc: Fixed bug with menu display while playing, which could
          show spurious move counters and play/pause buttons, especially